--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -360,3 +360,6 @@ escidoc.pubman_presentation.disable.view_revisions=${escidoc.pubman_presentation
 
 #Path to the sources.xml file
 escidoc.import.sources.xml=${escidoc.import.sources.xml}
+
+#Flag indicating if handle system is activated
+escidoc.handles.activated=${escidoc.handles.activated}
