--- a/common_services/transformation/src/test/resources/pubman.properties
+++ b/common_services/transformation/src/test/resources/pubman.properties
@@ -35,3 +35,6 @@ escidoc.transformation.bmc2escidoc.configuration.filename=${escidoc.transformati
 escidoc.transformation.marcxml2escidoc.stylesheet.filename=${escidoc.transformation.marcxml2escidoc.stylesheet.filename}
 escidoc.transformation.marcxml2escidoc.configuration.filename=${escidoc.transformation.marcxml2escidoc.configuration.filename}
 escidoc.transformation.escidoc2marcxml.stylesheet.filename=${escidoc.transformation.escidoc2marcxml.stylesheet.filename}
+
+# release build
+escidoc.common.release.build=${escidoc.common.release.build}
