--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -328,6 +328,9 @@ escidoc.pubman.instance.ssrn_contexts=${escidoc.pubman.instance.ssrn_contexts}
 #Url or path to an image that is displayed as logo on all Pubman Pages.
 escidoc.pubman.logo.url=${escidoc.pubman.logo.url}
 
+#Additional CSS styles for the logo
+escidoc.pubman.logo.css=${escidoc.pubman.logo.css}
+
 #External html content that can be displayed on the homepage. Different Languages are supported by adding the locale (.de, .en etc.) to the end of the provided file
 escidoc.pubman.home.content.url=${escidoc.pubman.home.content.url}
 
