--- a/pubman/pubman_installer_escidoc/src/test/build.xml
+++ b/pubman/pubman_installer_escidoc/src/test/build.xml
@@ -1,18 +1,16 @@
 <project name="start">	
 	
 	<target name="init" description="Intialize runtime environment">
-	    <property name="install.dir" location="c:/tmp" />
+	    <property name="install.dir" location="c:/tmp1" />
 	  </target>
 	<target name="start-jboss" depends="init" description="Starts JBoss eSciDoc">
 		<echo level="debug">Starting JBoss Server</echo>
 
-			 		<exec dir="${install.dir}/jboss/bin" executable="cmd">
-			 			<!--
+			 		<exec dir="${install.dir}/jboss/bin" executable="cmd" spawn="true" >
+			 			
 			 			<arg value="/c"/>
 			 			<arg value="run.bat"/>
-			 			<arg value="-b 0.0.0.0"/>
-			 			-->
-			 			<arg line="/c run.bat" />
+			 			
 			 		</exec>
 	</target>
 </project>
