--- a/pubman/pubman_presentation/pom.xml
+++ b/pubman/pubman_presentation/pom.xml
@@ -365,6 +365,11 @@
 		  <version>1.3</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-parsers</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.14</version>
@@ -383,6 +388,8 @@
 		  <version>1.2_09-BETA1</version>
 		  <scope>provided</scope>
 		</dependency>
+
+		
 	 
 	</dependencies>
 	
