technical metadata: new property escidoc.pubman.tme.configuration
Former-commit-id: 10f14a900922d7dd139c762f25af321f55561009

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -366,3 +366,6 @@ escidoc.import.sources.xml=${escidoc.import.sources.xml}
 
 #Flag indicating if handle system is activated
 escidoc.handles.activated=${escidoc.handles.activated}
+
+#Component used for extracting technical metadata. Possible values are tika or jhove.
+escidoc.pubman.tme.configuration=${escidoc.pubman.tme.configuration}
