Added new logos

--- a/common_services/cone_presentation/src/main/webapp/WEB-INF/web.xml
+++ b/common_services/cone_presentation/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,12 @@
 
 	<servlet-mapping>
 		<servlet-name>default</servlet-name>
-		<url-pattern>/img/*</url-pattern>
+		<url-pattern>*.png</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.jpg</url-pattern>
 	</servlet-mapping>
 
 	<servlet-mapping>
