--- a/pubman/pubman_installer_basic/pom.xml
+++ b/pubman/pubman_installer_basic/pom.xml
@@ -310,6 +310,12 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.2</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.codehaus.plexus</groupId>
 			<artifactId>plexus-utils</artifactId>
 			<version>1.5.6</version>
