--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -239,7 +239,41 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+		    <repository>
+      		<id>org.escidoc.core</id>
+      		<url>https://www.escidoc.org/artifactory/anonymous-repo</url>
+      		<snapshots>
+        		<enabled>true</enabled>
+      		</snapshots>
+    	</repository>
 	</repositories>
+	
+	<pluginRepositories>
+    	<pluginRepository>
+      		<id>org.escidoc.core</id>
+      		<url>https://www.escidoc.org/artifactory/anonymous-repo</url>
+      		<snapshots>
+        		<enabled>true</enabled>
+      		</snapshots>
+   		 </pluginRepository>
+   		 <!--  
+    <pluginRepository>
+      <id>maven2-repository.dev.java.net</id>
+      <name>Java.net Maven 2 Repository</name>
+      <url>http://download.java.net/maven/2</url>
+    </pluginRepository>
+    <pluginRepository>
+      <id>codehaus snapshot repository</id>
+      <url>http://snapshots.repository.codehaus.org/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+    -->
+  </pluginRepositories>
 	
 	<distributionManagement>
 		<repository>
