--- a/common_services/search_presentation/pom.xml
+++ b/common_services/search_presentation/pom.xml
@@ -31,19 +31,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.72</version>
+		<version>1.0.73-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>search_presentation</artifactId>
 	<name>search_presentation</name>
-	<version>1.1.6</version>
+	<version>1.1.7-SNAPSHOT</version>
 	<packaging>war</packaging>
 	
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.72</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/common_services-1.0.72</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.72</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/search_presentation-1.0.15</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/search_presentation-1.0.15</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/tags/search_presentation-1.0.15</url>
 	</scm>
 	<build>
 		<plugins>
@@ -61,7 +61,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>search</artifactId>
-			<version>1.1.6</version>
+			<version>1.1.7-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
