--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -32,7 +32,7 @@
 	<groupId>de.mpg.escidoc.pubman</groupId>
 	<artifactId>pubman</artifactId>
 	<packaging>pom</packaging>
-	<version>7.4.3-SNAPSHOT</version>
+	<version>7.5.0</version>
 	<name>pubman</name>
 	<url>http://pubman.mpdl.mpg.de/software</url>
 	<description>
@@ -224,9 +224,9 @@
 		<module>pubman_installer</module>
 	</modules>
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/pubman/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.5.0</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.5.0</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.5.0</url>
 	</scm>
 	<repositories>
 		<repository>
@@ -897,7 +897,7 @@
 		<escidoc.pubman.instance.ssrn_contexts>escidoc:167026,escidoc:1002</escidoc.pubman.instance.ssrn_contexts>
 		<!-- Externalisation of home page content -->
 		<escidoc.pubman.logo.url>/resources/images/pure_logo_web.png</escidoc.pubman.logo.url>
-		<escidoc.pubman.logo.css></escidoc.pubman.logo.css>
+		<escidoc.pubman.logo.css />
 		<escidoc.pubman.home.content.url />
 		<!-- Additional link in meta menu -->
 		<escidoc.pubman.survey.url />
