--- a/pom.xml
+++ b/pom.xml
@@ -515,6 +515,10 @@
 						<groupId>org.codehaus.castor</groupId>
 						<artifactId>castor-xml</artifactId>
 					</exclusion>
+					<exclusion>
+						<groupId>bouncycastle</groupId>
+						<artifactId>*</artifactId>
+					</exclusion>
 				</exclusions>
 			</dependency>
 			<!-- JAsperreports imports itext v2.1.7.js6, which is not available via maven anymore. So use v2.1.7. here. -->
