--- a/model/pom.xml
+++ b/model/pom.xml
@@ -162,8 +162,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch</artifactId>
+			<groupId>co.elastic.clients</groupId>
+			<artifactId>elasticsearch-java</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.jibx</groupId>
