es 8 for pubman_presentation pt2

--- a/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman_ear/src/main/resources/pubman.properties
@@ -112,6 +112,7 @@ inge.email.withauthentication=${inge.email.withauthentication}
 
 inge.es.cluster.name=${inge.es.cluster.name}
 inge.es.transport.ips=${inge.es.transport.ips}
+inge.es.rest.host-port = ${inge.es.rest.host-port}
 
 inge.filestorage.filesystem_path=${inge.filestorage.filesystem_path}
 inge.filestorage.oai.filesystem_path=${inge.filestorage.oai.filesystem_path}
