--- a/pom.xml
+++ b/pom.xml
@@ -1191,6 +1191,7 @@
 		<inge.es.cluster.name>elastic_inge</inge.es.cluster.name>
 		<inge.es.transport.ips.test>127.0.0.1:9500</inge.es.transport.ips.test>
 		<inge.es.transport.ips>134.76.28.200:8080</inge.es.transport.ips>
+		<inge.es.rest.host-port>localhost:9200</inge.es.rest.host-port>
 		<inge.filestorage.filesystem_path>/standalone/data/inge_files/</inge.filestorage.filesystem_path>
 		<inge.filestorage.oai.filesystem_path>/standalone/data/inge_oai_files/</inge.filestorage.oai.filesystem_path>
 		<inge.filestorage.seaweed_direct_submit_path>/submit</inge.filestorage.seaweed_direct_submit_path>
