spring 6 next steps, but activemq !!!

--- a/inge_db_connector/pom.xml
+++ b/inge_db_connector/pom.xml
@@ -75,13 +75,15 @@
 		<dependency>
 			<!-- Required for Hibernate -->
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-ehcache</artifactId>
+			<artifactId>hibernate-jcache</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
