--- a/inge_db_connector/src/main/resources/hibernate.properties
+++ b/inge_db_connector/src/main/resources/hibernate.properties
@@ -1,7 +1,7 @@
-hibernate.dialect=de.mpg.mpdl.inge.db.spring.JsonPostgreSQL9Dialect
+###hibernate.dialect=de.mpg.mpdl.inge.db.spring.JsonPostgreSQL9Dialect
 hibernate.cache.use_second_level_cache=true
 hibernate.cache.use_query_cache=true
-hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+hibernate.cache.region.factory_class=jcache
 hibernate.jdbc.time_zone=UTC
 #Speed up startup, do not load all metadata from database
 hibernate.temp.use_jdbc_metadata_defaults=false
