--- a/pubman_logic/pom.xml
+++ b/pubman_logic/pom.xml
@@ -106,12 +106,18 @@
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-spring</artifactId>
+			<version>5.17.3</version>
 		</dependency>
 		<dependency>
 			<!-- Required for Spring -->
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-kahadb-store</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<!-- Required for Spring -->
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-broker</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
