--- a/inge_db_connector/pom.xml
+++ b/inge_db_connector/pom.xml
@@ -78,6 +78,10 @@
 			<artifactId>hibernate-jcache</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+		</dependency>
 		<!--
 		<dependency>
 			<groupId>org.hibernate</groupId>
