--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<module>model</module>
 		<module>pubman_ear</module>
 		<module>pubman_logic</module>
-		<module>pubman_presentation</module>
+		<!--<module>pubman_presentation</module>-->
 		<module>pubman_rest</module>
 		<module>reindex_util</module>
 		<module>transformationManager</module>
@@ -225,8 +225,8 @@
 			<artifactId>jsf-impl</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>jakarta.faces</groupId>
-			<artifactId>jakarta.faces-api</artifactId>
+			<groupId>javax.faces</groupId>
+			<artifactId>javax.faces-api</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -237,9 +237,15 @@
 			<!-- Apache -->
 			<dependency>
 				<groupId>org.apache.activemq</groupId>
-				<artifactId>activemq-spring</artifactId>
-				<version>5.17.3</version>
+				<artifactId>artemis-jakarta-client</artifactId>
+				<version>2.28.0</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.activemq</groupId>
+				<artifactId>artemis-server</artifactId>
+				<version>2.28.0</version>
+			</dependency>
+			<!--
 			<dependency>
 				<groupId>org.apache.activemq</groupId>
 				<artifactId>activemq-kahadb-store</artifactId>
@@ -250,6 +256,7 @@
 				<artifactId>activemq-broker</artifactId>
 				<version>5.17.3</version>
 			</dependency>
+			-->
 
 			<dependency>
 				<groupId>org.apache.commons</groupId>
@@ -445,6 +452,18 @@
 				<artifactId>dozer-core</artifactId>
 				<version>6.5.2</version>
 			</dependency>
+			<!-- required for Dozer-->
+			<dependency>
+				<groupId>javax.el</groupId>
+				<artifactId>javax.el-api</artifactId>
+				<version>3.0.0</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.xml.bind</groupId>
+				<artifactId>jaxb-api</artifactId>
+				<version>2.3.1</version>
+			</dependency>
+
 
 			<!-- Elastic Search -->
 			<!--
@@ -495,6 +514,12 @@
 				<groupId>org.ehcache</groupId>
 				<artifactId>ehcache</artifactId>
 				<version>3.10.8</version>
+
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish.jaxb</groupId>
+				<artifactId>jaxb-runtime</artifactId>
+				<version>2.3.6</version>
 			</dependency>
 
 			<!-- Jackson -->
@@ -559,14 +584,20 @@
 			<dependency>
 				<groupId>org.glassfish.jersey.core</groupId>
 				<artifactId>jersey-client</artifactId>
-				<version>2.30</version>
+				<version>3.1.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.glassfish.jersey.inject</groupId>
 				<artifactId>jersey-hk2</artifactId>
+				<version>3.1.1</version>
+			</dependency>
+			<!--
+			<dependency>
+				<groupId>jakarta.ws.rs</groupId>
+				<artifactId>jakarta.ws.rs-api</artifactId>
 				<version>2.30</version>
 			</dependency>
-
+-->
 			<!-- Jibx -->
 			<dependency>
 				<groupId>org.jibx</groupId>
@@ -586,9 +617,9 @@
 
 			<!-- JSF -->
 			<dependency>
-				<groupId>jakarta.faces</groupId>
-				<artifactId>jakarta.faces-api</artifactId>
-				<version>3.0.0</version>
+				<groupId>javax.faces</groupId>
+				<artifactId>javax.faces-api</artifactId>
+				<version>2.2</version>
 			</dependency>
 			<dependency>
 				<groupId>com.sun.faces</groupId>
@@ -633,22 +664,22 @@
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-1.2-api</artifactId>
-				<version>2.17.1</version>
+				<version>2.19.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-api</artifactId>
-				<version>2.17.1</version>
+				<version>2.19.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-core</artifactId>
-				<version>2.17.1</version>
+				<version>2.19.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-slf4j-impl</artifactId>
-				<version>2.17.1</version>
+				<version>2.19.0</version>
 			</dependency>
 
 			<!-- Spring -->
@@ -784,6 +815,7 @@
 				<artifactId>pubman_logic</artifactId>
 				<version>8.4.13-SNAPSHOT</version>
 			</dependency>
+			<!--
 			<dependency>
 				<groupId>de.mpg.mpdl.inge</groupId>
 				<artifactId>pubman_presentation</artifactId>
@@ -791,6 +823,7 @@
 				<classifier>${inge.pubman.build.mode}</classifier>
 				<type>war</type>
 			</dependency>
+			-->
 			<dependency>
 				<groupId>de.mpg.mpdl.inge</groupId>
 				<artifactId>pubman_rest</artifactId>
@@ -816,16 +849,17 @@
 			</dependency>
 
 			<!-- Swagger -->
+			<!--
 			<dependency>
-				<!-- Required for swagger -->
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-swagger2</artifactId>
-				<version>2.9.2</version>
+				<groupId>org.springdoc</groupId>
+				<artifactId>springdoc-openapi-ui</artifactId>
+				<version>1.6.14</version>
 			</dependency>
+			-->
 			<dependency>
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-swagger-ui</artifactId>
-				<version>2.9.2</version>
+				<groupId>org.springdoc</groupId>
+				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+				<version>2.0.2</version>
 			</dependency>
 
 			<!-- Validation -->
