--- a/pubman_rest/pom.xml
+++ b/pubman_rest/pom.xml
@@ -45,15 +45,24 @@
 		<dependency>
 			<groupId>de.mpg.mpdl.inge</groupId>
 			<artifactId>pubman_logic</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-rest-webmvc</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<scope>provided</scope>
 		</dependency>
+		<!--
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator-jboss-vfs</artifactId>
+		</dependency>
+		-->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
