--- a/pubman_ear/pom.xml
+++ b/pubman_ear/pom.xml
@@ -234,6 +234,15 @@
 		<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator-jboss-vfs</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
