--- a/pubman_ear/pom.xml
+++ b/pubman_ear/pom.xml
@@ -47,13 +47,11 @@
 							<artifactId>cone_presentation</artifactId>
 							<contextRoot>/cone</contextRoot>
 						</webModule>
-						<!--
 						<webModule>
 							<groupId>de.mpg.mpdl.inge</groupId>
 							<artifactId>pubman_presentation</artifactId>
 							<contextRoot>/pubman</contextRoot>
 						</webModule>
-						-->
 						<webModule>
 							<groupId>de.mpg.mpdl.inge</groupId>
 							<artifactId>pubman_rest</artifactId>
@@ -208,14 +206,12 @@
 			<artifactId>cone_presentation</artifactId>
 			<type>war</type>
 		</dependency>
-		<!--
 		<dependency>
 			<groupId>de.mpg.mpdl.inge</groupId>
 			<artifactId>pubman_presentation</artifactId>
 			<classifier>${inge.pubman.build.mode}</classifier>
 			<type>war</type>
 		</dependency>
-		-->
 		<dependency>
 			<groupId>de.mpg.mpdl.inge</groupId>
 			<artifactId>pubman_rest</artifactId>
@@ -242,6 +238,16 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator-jboss-vfs</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>jakarta.faces</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.enterprise</groupId>
+			<artifactId>jakarta.enterprise.cdi-api</artifactId>
 		</dependency>
 	</dependencies>
 
