--- a/pubman_presentation/pom.xml
+++ b/pubman_presentation/pom.xml
@@ -86,16 +86,12 @@
 	</profiles>
 
 	<dependencies>
-		<!--
 		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-impl</artifactId>
+			<groupId>org.glassfish</groupId>
+			<artifactId>jakarta.faces</artifactId>
+			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>javax.faces</groupId>
-			<artifactId>javax.faces-api</artifactId>
-		</dependency>
-		-->
+
 		<dependency>
 			<groupId>de.mpg.mpdl.inge</groupId>
 			<artifactId>cone</artifactId>
@@ -120,6 +116,7 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
+			<classifier>jakarta</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
